# gemini

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
inc/: gemini.hpp
src/: gemini.cpp  main.cpp
